# native-paperclip

./: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: release-macos.yml
pages/: 404.tsx  _app.tsx  _error.tsx  index.tsx
scripts/: build.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: api-key-audit-panel.tsx  company-chip.tsx  connection-health-banner.tsx  home-app.tsx  instance-switcher.tsx  issue-create-form.tsx  onboarding-screen.tsx  pull-to-refresh.tsx  search-bar.tsx  sheet.tsx  ui.tsx  workspace.tsx
src/components/shell/: bottom-nav.tsx  more-drawer.tsx  tabs.ts
src/components/views/: agent-detail.tsx  agents-view.tsx  api-keys-list.tsx  approvals-view.tsx  audit-view.tsx  channels-view.tsx  companies-view.tsx  company-settings-view.tsx  dashboard-view.tsx  goals-view.tsx  inbox-view.tsx  issue-detail.tsx  issue-documents.tsx  layers-view.tsx  project-detail-view.tsx  projects-view.tsx  routines-view.tsx  run-transcript.tsx  skills-view.tsx
src/lib/: use-agents-route.ts  use-breakpoint.ts  use-companies-route.ts  use-drilldown.ts  use-projects-route.ts  use-tab-hash.ts  utils.ts
src/lib/api/: agents.ts  api-keys.ts  approvals.ts  budgets.ts  channels.ts  client.ts  dashboard.ts  documents.ts  issues.ts  layers.ts  me.ts  realtime.ts  routines.ts  skills.ts  types.ts  v2.ts
src/lib/desktop/: notifications.ts  (+1 more)
src/styles/: globals.css
(+4 files in other folders)
