[package]
name = "native-paperclip"
version = "0.3.0"
description = "Tauri 2 + Next.js native app for connecting to and controlling multiple Paperclip instances."
authors = ["thefux"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "native_paperclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
